# shl-assessment-recommender

./: .dockerignore  .env.example  .gitignore  APPROACH.md  ARCHITECTURE_DECISIONS.md  BUILD_PLAN.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep-warm.yml
data/snapshot/: catalog_snapshot.json
docs/: catalog_data_notes.md  caveats_and_tradeoffs.md  conversation_signals.md  out_of_the_box.md  policy_design.md  retrieval_design.md
scripts/: adversarial.py  build_snapshot.py  chat_client.py  measure_recall.py  replay_traces.py  trace_utils.py
shl_recommender/: __init__.py  bootstrap.py  config.py
shl_recommender/api/: __init__.py  app.py  errors.py  schemas.py  ui.py
shl_recommender/catalog/: __init__.py  loader.py  models.py  snapshot.py  test_type.py  vocabulary.py
shl_recommender/conversation/: __init__.py  extractor.py  policy.py  signals.py  state.py
shl_recommender/eval/: __init__.py  corpus.py  harness.py  judge.py  metamorphic.py
shl_recommender/llm/: __init__.py  client.py  understanding.py
shl_recommender/observability/: __init__.py  build_info.py  health.py  logging.py
shl_recommender/response/: __init__.py  engine.py  reply.py  shortlist.py  trace.py
shl_recommender/retrieval/: __init__.py  lexical.py  ranker.py  types.py
tests/: test_bootstrap.py
tests/api/: conftest.py  test_app.py  test_app_properties.py  test_errors.py  test_schemas.py  test_ui.py
tests/catalog/: test_loader.py  test_snapshot.py  test_test_type.py  test_trace_coverage.py  test_vocabulary.py
(+22 files in other folders)
